--- a/Simon/force-app/main/default/aura/SimonGame/SimonGame.css
+++ b/Simon/force-app/main/default/aura/SimonGame/SimonGame.css
@@ -23,5 +23,9 @@
     opacity:.4;
 }
 #GameContainer.THIS {
-	padding: 2.5% 5% 0% 2.5%;
+    margin:10% auto;
+    border: 5px solid black;
+    width:50%;
+	padding: 2.5% 5% 2% 2.5%;
+    background-color:grey;
 }
