Cleaned up code a bit and added more comments

--- a/Simon/force-app/main/default/aura/SimonGame/SimonGame.cmp
+++ b/Simon/force-app/main/default/aura/SimonGame/SimonGame.cmp
@@ -1,3 +1,12 @@
+<!--
+
+  Name: SimonGame
+  Author: Kameron Fincher
+  Description: Playable Simon game implemented 
+  inside of Salesforce with an aura component
+
+-->
+
 <aura:component >
     <aura:attribute name="GeneratedList" type="List"/>
     <aura:attribute name="GameStarted" type="Boolean" default="false"/>
@@ -8,32 +17,35 @@
     
     <aura:handler name="init" value="{!this}" action="{!c.init}"/>
     
+    <!--Game container-->
     <div id="GameContainer">
         <div class="slds-align_absolute-center slds-text-heading_large slds-m-bottom_medium" id="DisplayText">Click Start to Play!</div>
+        
+        <!--Color display section-->
         <div class="slds-align_absolute-center">
-        <div class="slds-grid slds-gutters slds-m-bottom_medium" style="height:80px;width:500px">
-        
-            <div id="IDRed" class="color-box slds-col slds-size_3-of-12 slds-theme_backgroundColor-red">
-            	<div class="slds-align_absolute-center" style="height:5rem">o</div>
-            </div>
+            <div class="slds-grid slds-gutters slds-m-bottom_medium" style="height:80px;width:500px">
                 
-            
-            
-            <div id="IDBlue" class= "color-box slds-col slds-size_3-of-12 slds-theme_backgroundColor-blue">
-                <div class="slds-align_absolute-center" style="height:5rem">o</div>
+                <div id="IDRed" class="color-box slds-col slds-size_3-of-12 slds-theme_backgroundColor-red">
+                    <div class="slds-align_absolute-center" style="height:5rem">o</div>
+                </div>
+                
+                <div id="IDBlue" class= "color-box slds-col slds-size_3-of-12 slds-theme_backgroundColor-blue">
+                    <div class="slds-align_absolute-center" style="height:5rem">o</div>
+                </div>
+                
+                <div id="IDGreen" class= "color-box slds-col slds-size_3-of-12 slds-theme_backgroundColor-green">
+                    <div class="slds-align_absolute-center" style="height:5rem">o</div>
+                </div>              
+                
+                <div id="IDYellow" class= "color-box slds-col slds-size_3-of-12 slds-theme_backgroundColor-yellow">
+                    <div class="slds-align_absolute-center" style="height:5rem">o</div>
+                </div>
+                
             </div>
-          
-            <div id="IDGreen" class= "color-box slds-col slds-size_3-of-12 slds-theme_backgroundColor-green">
-				<div class="slds-align_absolute-center" style="height:5rem">o</div>
-            </div>              
-
-            <div id="IDYellow" class= "color-box slds-col slds-size_3-of-12 slds-theme_backgroundColor-yellow">
-         		<div class="slds-align_absolute-center" style="height:5rem">o</div>
-            </div>
-       
         </div>
-        </div>
+        <!--Color display section-->
         
+        <!--Player input section-->
         <div class="slds-align_absolute-center slds-m-bottom_x-small">
             <lightning:button disabled="{!v.ButtonsNotPushable}" label="Red" title="Red" onclick="{!c.userInputRed}"/>
             <lightning:button disabled="{!v.ButtonsNotPushable}" label="Blue" title="Blue" onclick="{!c.userInputBlue}"/>
@@ -45,8 +57,11 @@
             <lightning:button disabled="{!v.GameStarted}" label="Start Game" title="Start Game" onclick="{!c.startGame}"/>
             <lightning:button disabled="false" label="Stop Game" title="Stop Game" onclick="{!c.gameEnd}"/>
         </div>
-		<div class="slds-align_absolute-center">
-			<div id="ComboText">Sequences cleared: 0</div>
+        <!--Player input section-->
+        
+        <div class="slds-align_absolute-center">
+            <div id="ComboText">Sequences cleared: 0</div>
         </div>
     </div>
+    <!--Game container-->
 </aura:component>
